# dispatch-plugins

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
catalog/: Cargo.toml  README.md  extensions.json
catalog/src/: main.rs
channels/discord/: Cargo.toml  README.md  channel-plugin.json
channels/discord/src/: discord_api.rs  main.rs  protocol.rs
channels/discord/tests/: ingress_protocol.rs
channels/email/: Cargo.toml  README.md  channel-plugin.json
channels/email/src/: imap_smtp.rs  main.rs  protocol.rs
channels/gmail/: Cargo.toml  README.md  channel-plugin.json
channels/gmail/src/: imap_smtp.rs  main.rs  protocol.rs
channels/outlook/: Cargo.toml  README.md  channel-plugin.json
channels/outlook/src/: imap_smtp.rs  main.rs  protocol.rs
channels/schema/: Cargo.toml  README.md
channels/schema/src/: catalog.rs  lib.rs  manifest.rs
channels/signal/: Cargo.toml  README.md  channel-plugin.json
channels/signal/src/: main.rs  protocol.rs  signal_api.rs
channels/signal/tests/: ingress_protocol.rs
channels/slack/: Cargo.toml  README.md  channel-plugin.json
channels/slack/src/: main.rs  protocol.rs  slack_api.rs
channels/slack/tests/: ingress_protocol.rs
channels/telegram/: Cargo.toml  README.md  channel-plugin.json
channels/telegram/src/: main.rs  protocol.rs  telegram_api.rs
channels/telegram/tests/: ingress_protocol.rs
channels/twilio-sms/: Cargo.toml  README.md  channel-plugin.json
channels/twilio-sms/src/: main.rs  protocol.rs  twilio_api.rs
channels/webhook/: Cargo.toml  README.md  channel-plugin.json
channels/webhook/src/: main.rs  protocol.rs  webhook_api.rs
channels/whatsapp/: Cargo.toml  README.md  channel-plugin.json
channels/whatsapp/src/: main.rs  protocol.rs  whatsapp_api.rs
channels/whatsapp/tests/: ingress_protocol.rs
crates/channel-email-core/: Cargo.toml
crates/channel-email-core/src/: imap_smtp.rs  lib.rs
crates/dispatch-channel-runtime/: Cargo.toml
crates/dispatch-channel-runtime/src/: lib.rs
