[workspace]
members = [
  "catalog",
  "channels/discord",
  "channels/schema",
  "channels/signal",
  "channels/slack",
  "channels/telegram",
  "channels/twilio-sms",
  "channels/webhook",
  "channels/whatsapp",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/serenorg/dispatch-plugins"
