[workspace]
members = [
  "catalog",
  "crates/dispatch-channel-runtime",
  "crates/channel-email-core",
  "channels/discord",
  "channels/email",
  "channels/gmail",
  "channels/outlook",
  "channels/schema",
  "channels/slack",
  "channels/telegram",
  "channels/twilio-sms",
  "channels/webhook",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/serenorg/dispatch-plugins"
