[package]
name = "channel-discord"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dispatch channel plugin for Discord."
repository.workspace = true
keywords = ["dispatch", "channel", "discord", "agents"]
categories = ["command-line-utilities"]

[[bin]]
name = "channel-discord"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dispatch-channel-protocol = { git = "https://github.com/serenorg/dispatch", rev = "0783dabd10895ba19312b53614972ed78b7b58f9" }
ed25519-dalek = "2.2"
hex = "0.4"
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json", "multipart"] }

[dev-dependencies]
channel-schema = { path = "../schema" }
