[package]
name = "channel-email"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dispatch channel plugin for IMAP and SMTP email."
repository.workspace = true
keywords = ["dispatch", "channel", "email", "imap"]
categories = ["command-line-utilities"]

[[bin]]
name = "channel-email"
path = "src/main.rs"

[dependencies]
anyhow = "1"
channel-email-core = { path = "../../crates/channel-email-core" }

[dev-dependencies]
channel-schema = { path = "../schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
