[package]
name = "channel-gmail"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dispatch channel plugin for Gmail via IMAP and SMTP."
repository.workspace = true
keywords = ["dispatch", "channel", "gmail", "email"]
categories = ["command-line-utilities"]

[[bin]]
name = "channel-gmail"
path = "src/main.rs"

[dependencies]
anyhow = "1"
channel-email-core = { path = "../../crates/channel-email-core" }

[dev-dependencies]
channel-schema = { path = "../schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
