[package]
name = "channel-outlook"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dispatch channel plugin for Outlook and Microsoft 365 email via IMAP and SMTP."
repository.workspace = true
keywords = ["dispatch", "channel", "outlook", "email"]
categories = ["command-line-utilities"]

[[bin]]
name = "channel-outlook"
path = "src/main.rs"

[dependencies]
anyhow = "1"
channel-email-core = { path = "../../crates/channel-email-core" }

[dev-dependencies]
channel-schema = { path = "../schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
