[package]
name = "channel-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dispatch channel plugin for Signal."
repository.workspace = true
keywords = ["dispatch", "channel", "signal", "agents"]
categories = ["command-line-utilities"]

[[bin]]
name = "channel-signal"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dispatch-channel-protocol = { git = "https://github.com/serenorg/dispatch", rev = "02dda945c53be7dbb02f43a008285733b34fb089", package = "dispatch-channel-protocol" }
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.27"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
channel-schema = { path = "../schema" }
