[package]
name = "channel-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dispatch channel plugin for Signal."
repository.workspace = true
keywords = ["dispatch", "channel", "signal", "agents"]
categories = ["command-line-utilities"]

[[bin]]
name = "channel-signal"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dispatch-channel-runtime = { path = "../../crates/dispatch-channel-runtime" }
dispatch-channel-protocol = { git = "https://github.com/serenorg/dispatch", rev = "0783dabd10895ba19312b53614972ed78b7b58f9" }
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.27"
ureq = { version = "3", features = ["json"] }
tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }

[dev-dependencies]
channel-schema = { path = "../schema" }
