[package]
name = "channel-slack"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dispatch channel plugin for Slack."
repository.workspace = true
keywords = ["dispatch", "channel", "slack", "agents"]
categories = ["command-line-utilities"]

[[bin]]
name = "channel-slack"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dispatch-channel-runtime = { path = "../../crates/dispatch-channel-runtime" }
dispatch-channel-protocol = { git = "https://github.com/serenorg/dispatch", rev = "e6a1c9a6c7f79507ffc0c7bcac8670ad47bd655d" }
hex = "0.4"
hmac = "0.12"
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
channel-schema = { path = "../schema" }
