[package]
name = "channel-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dispatch channel plugin for Telegram."
repository.workspace = true
keywords = ["dispatch", "channel", "telegram", "agents"]
categories = ["command-line-utilities"]

[[bin]]
name = "channel-telegram"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dispatch-channel-runtime = { path = "../../crates/dispatch-channel-runtime" }
dispatch-channel-protocol = { git = "https://github.com/serenorg/dispatch", tag = "v0.4.0" }
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json", "multipart"] }

[dev-dependencies]
channel-schema = { path = "../schema" }
