[package]
name = "channel-whatsapp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dispatch channel plugin for WhatsApp Cloud API."
repository.workspace = true
keywords = ["dispatch", "channel", "whatsapp", "meta", "agents"]
categories = ["command-line-utilities"]

[[bin]]
name = "channel-whatsapp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dispatch-channel-protocol = { git = "https://github.com/serenorg/dispatch", rev = "f3354efba62f3af26fb0583482fd6f99f069c9a8", package = "dispatch-channel-protocol" }
hex = "0.4"
hmac = "0.12"
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "3", features = ["json", "multipart"] }

[dev-dependencies]
channel-schema = { path = "../schema" }
