[package]
name = "channel-whatsapp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dispatch channel plugin for WhatsApp Cloud API."
repository.workspace = true
keywords = ["dispatch", "channel", "whatsapp", "meta", "agents"]
categories = ["command-line-utilities"]

[[bin]]
name = "channel-whatsapp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dispatch-channel-protocol = { git = "https://github.com/serenorg/dispatch", rev = "936b61eb2dd44de66e474d62ba99d23376c0cff2" }
hex = "0.4"
hmac = "0.12"
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "3", features = ["json", "multipart"] }

[dev-dependencies]
channel-schema = { path = "../schema" }
