[package]
name = "channel-email-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lib]
name = "channel_email_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dispatch-channel-runtime = { path = "../dispatch-channel-runtime" }
dispatch-channel-protocol = { git = "https://github.com/serenorg/dispatch", rev = "936b61eb2dd44de66e474d62ba99d23376c0cff2" }
imap = { version = "3.0.0-alpha.15", default-features = false, features = ["rustls-tls"] }
jiff = "0.2"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
mail-parser = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
