[package]
name = "dispatch-channel-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Shared runtime helpers for Dispatch channel plugins."
repository.workspace = true
keywords = ["dispatch", "channel", "runtime", "plugins"]
categories = ["command-line-utilities"]

[lib]
name = "dispatch_channel_runtime"
path = "src/lib.rs"

[dependencies]
dispatch-channel-protocol = { git = "https://github.com/serenorg/dispatch", rev = "0783dabd10895ba19312b53614972ed78b7b58f9" }
thiserror = "2"
